// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hyper.app theme generator should provide installation instructions 1`] = `
"
First, copy (or symlink) the outputted package directories to the Hyper local plugins directory:

    cp -R 'themer-hyper-dark' ~/.hyper_plugins/local/
    cp -R 'themer-hyper-light' ~/.hyper_plugins/local/

Then edit \`~/.hyper.js\` and add the package to the \`localPlugins\` array:

    ...
    localPlugins: [
      'themer-hyper-dark' // or 'themer-hyper-light'
    ],
    ...
  "
`;

exports[`Hyper.app theme generator should render valid JSON to package.json files 1`] = `
Object {
  "description": "dark theme for Hyper.app, generated by themer",
  "keywords": Array [
    "themer",
    "dark",
    "hyper",
  ],
  "main": "themer-hyper-dark/index.js",
  "name": "themer-hyper-dark",
}
`;

exports[`Hyper.app theme generator should render valid JSON to package.json files 2`] = `
Object {
  "description": "light theme for Hyper.app, generated by themer",
  "keywords": Array [
    "themer",
    "light",
    "hyper",
  ],
  "main": "themer-hyper-light/index.js",
  "name": "themer-hyper-light",
}
`;

exports[`Hyper.app theme generator should render valid plugin files 1`] = `
"
    module.exports.decorateConfig = config => {
      return Object.assign({}, config, {
        cursorColor: 'rgba(204, 120, 250, 0.5)',
        cursorAccentColor: '#282629',
        foregroundColor: '#E0DCE0',
        backgroundColor: '#282629',
        selectionColor: 'rgba(102, 191, 255, 0.09999999999999998)',
        borderColor: '#26C99E',
        colors: {
          black: '#282629',
          red: '#FF4050',
          green: '#A4CC35',
          yellow: '#FFD24A',
          blue: '#66BFFF',
          magenta: '#F553BF',
          cyan: '#26C99E',
          white: '#E0DCE0',
          lightBlack: '#474247',
          lightRed: '#F28144',
          lightGreen: '#A4CC35',
          lightYellow: '#FFD24A',
          lightBlue: '#66BFFF',
          lightMagenta: '#F553BF',
          lightCyan: '#26C99E',
          lightWhite: '#FFFCFF',
        },
      });
    };
  "
`;

exports[`Hyper.app theme generator should render valid plugin files 2`] = `
"
    module.exports.decorateConfig = config => {
      return Object.assign({}, config, {
        cursorColor: 'rgba(191, 101, 240, 0.5)',
        cursorAccentColor: '#FFFCFF',
        foregroundColor: '#474247',
        backgroundColor: '#FFFCFF',
        selectionColor: 'rgba(83, 166, 225, 0.09999999999999998)',
        borderColor: '#1FC598',
        colors: {
          black: '#FFFCFF',
          red: '#F03E4D',
          green: '#97BD2D',
          yellow: '#EEBA21',
          blue: '#53A6E1',
          magenta: '#EE4EB8',
          cyan: '#1FC598',
          white: '#474247',
          lightBlack: '#E0DCE0',
          lightRed: '#F37735',
          lightGreen: '#97BD2D',
          lightYellow: '#EEBA21',
          lightBlue: '#53A6E1',
          lightMagenta: '#EE4EB8',
          lightCyan: '#1FC598',
          lightWhite: '#282629',
        },
      });
    };
  "
`;
